--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,23 @@
-version: '3.8'
+version: "3.9"
 
 services:
-  flask-app:
+  web:
     build: .
-    container_name: flask-app
     ports:
       - "5000:5000"
-    networks:
-      - selenium-net
+    volumes:
+      - .:/app
+    environment:
+      - FLASK_ENV=development
 
-  selenium-chrome:
-    image: selenium/standalone-chrome
-    container_name: selenium-chrome
-    shm_size: 2g  # Important pour éviter les crashs de Chrome
+  jenkins:
+    image: jenkins/jenkins:lts
     ports:
-      - "4444:4444"  # Port WebDriver
-    networks:
-      - selenium-net
+      - "8080:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins_home:/var/jenkins_home
+    user: root # Pour autoriser apt-get
 
-networks:
-  selenium-net:
-    driver: bridge
+volumes:
+  jenkins_home:
