--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.tests=tests
 
 sonar.python.version=3.11
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://localhost:9000
+sonar.host.url=http://sonarqube:9000
