--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,25 +7,41 @@ services:
     ports:
       - "5000:5000"
     networks:
-      - selenium-net
+      - dev-net
 
   selenium-chrome:
     image: selenium/standalone-chrome
     container_name: selenium-chrome
-    shm_size: 2g  # Important pour éviter les crashs de Chrome
+    shm_size: 2g
     ports:
-      - "4444:4444"  # Port WebDriver
+      - "4444:4444"
     networks:
-      - selenium-net
+      - dev-net
 
   sonarqube:
     image: sonarqube:lts
     container_name: sonarqube
     ports:
-    - "9000:9000"
+      - "9000:9000"
     environment:
-    - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+    networks:
+      - dev-net
+
+  jenkins:
+    image: jenkins/jenkins:lts
+    container_name: jenkins
+    ports:
+      - "8080:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins_home:/var/jenkins_home
+    networks:
+      - dev-net
+
+volumes:
+  jenkins_home:
 
 networks:
-  selenium-net:
+  dev-net:
     driver: bridge
