--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -2,13 +2,25 @@ FROM jenkins/jenkins:lts
 
 USER root
 
-# Installer Python + pip + Chrome
+# Installation de Python, pip, venv et Chrome + Chromedriver
 RUN apt-get update && \
-    apt-get install -y python3 python3-pip python3.11-venv wget gnupg2 && \
-    wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
-    sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' && \
-    apt-get update && \
-    apt-get install -y google-chrome-stable && \
+    apt-get install -y \
+        python3 \
+        python3-pip \
+        python3.11-venv \
+        wget \
+        gnupg2 \
+        curl \
+        unzip \
+        chromium \
+        chromium-driver && \
+    apt-get clean && \
     rm -rf /var/lib/apt/lists/*
+
+# Vérifications (facultatif, utile pour debug)
+RUN python3 --version && \
+    pip3 --version && \
+    chromium --version && \
+    chromedriver --version
 
 USER jenkins
