--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,47 +2,34 @@ version: '3.8'
 
 services:
   flask-app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: flask-app
     ports:
       - "5000:5000"
     networks:
       - dev-net
-
-  selenium-chrome:
-    image: selenium/standalone-chrome
-    container_name: selenium-chrome
-    shm_size: 2g
-    ports:
-      - "4444:4444"
-    networks:
-      - dev-net
-
-  sonarqube:
-    image: sonarqube:lts
-    container_name: sonarqube
-    ports:
-      - "9000:9000"
-    environment:
-      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
-    networks:
-      - dev-net
+    restart: unless-stopped
 
   jenkins:
     build:
       context: .
       dockerfile: Dockerfile.jenkins
     container_name: jenkins
+    user: root
     ports:
       - "8080:8080"
+      - "50000:50000"
     volumes:
       - jenkins_home:/var/jenkins_home
     networks:
       - dev-net
+    depends_on:
+      - flask-app
 
 networks:
   dev-net:
-    driver: bridge
 
 volumes:
   jenkins_home:
