--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -1,26 +1,25 @@
-FROM jenkins/jenkins:lts
+FROM python:3.11-slim
 
-USER root
-
-# Installation de Python, pip, venv et Chrome + Chromedriver
+# Installer Java (nécessaire pour sonar-scanner)
 RUN apt-get update && \
-    apt-get install -y \
-        python3 \
-        python3-pip \
-        python3.11-venv \
-        wget \
-        gnupg2 \
-        curl \
-        unzip \
-        chromium \
-        chromium-driver && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y openjdk-17-jdk curl unzip git && \
+    apt-get clean
 
-# Vérifications (facultatif, utile pour debug)
-RUN python3 --version && \
-    pip3 --version && \
-    chromium --version && \
-    chromedriver --version
+# Installer pipenv ou autres outils Python utiles
+RUN pip install --upgrade pip setuptools wheel
 
-USER jenkins
+# Installer SonarScanner
+ENV SONAR_SCANNER_VERSION=5.0.1.3006
+RUN curl -sSLo /tmp/sonarscanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-${SONAR_SCANNER_VERSION}-linux.zip && \
+    unzip /tmp/sonarscanner.zip -d /opt && \
+    ln -s /opt/sonar-scanner-${SONAR_SCANNER_VERSION}-linux /opt/sonar-scanner && \
+    ln -s /opt/sonar-scanner/bin/sonar-scanner /usr/local/bin/sonar-scanner
+
+# Définir la variable JAVA_HOME pour sonar-scanner
+ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+ENV PATH="${PATH}:/opt/sonar-scanner/bin"
+
+WORKDIR /app
+COPY . .
+
+CMD [ "bash" ]
