--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,10 @@ sonar.projectVersion=1.0
 
 sonar.sources=api
 sonar.tests=tests
+sonar.python.coverage.reportPaths=coverage.xml
+sonar.exclusions=venv/**, static/**, templates/**
+
+sonar.test.inclusions=tests/**/*.py
 
 sonar.python.version=3.11
 sonar.sourceEncoding=UTF-8
